--- a/inst/rmarkdown/templates/msmb_html/resources/msmb.css
+++ b/inst/rmarkdown/templates/msmb_html/resources/msmb.css
@@ -228,7 +228,7 @@ when window exceeds 1615px */
     font-size: 0.7rem;
     padding-left: 0;
     padding-right: 0;
-    background-color: rgb(24,129,194,0.3);
+    background-color: rgb(255, 38, 230,0.3);
     list-style-type: none;
 }
 
