--- a/inst/rmarkdown/templates/pink_html/resources/pink.css
+++ b/inst/rmarkdown/templates/pink_html/resources/pink.css
@@ -168,7 +168,7 @@ blockquote .marginnote, blockquote .sidenote {
     margin-right: -84.4%;
 }
 
-.msmb {
+.pink {
     display: inline-block;
     color: white;
     padding: 14px 16px;
