--- a/inst/rmarkdown/templates/pink_html/resources/pink.css
+++ b/inst/rmarkdown/templates/pink_html/resources/pink.css
@@ -287,7 +287,7 @@ pre {
     padding-bottom: 2px;
     padding-left: 1%;
     padding-right: 1%;
-    background-color: #ffb5f6;
+    background-color: #f7f7f7;
     margin-bottom: 4px;
     margin-top: 4px;
     overflow-x: scroll;
